<resources>
    <string name="app_name">We_Plan</string>
    <string name="nakupovalni_seznam">Nakupovalni seznam</string>
    <string name="seznam_opravil">seznam opravil</string>
    <string name="dodaj">Dodaj</string>
    <string name="tri_pike">...</string>
    <string name="kljucElementa">kljucElementa</string>
    <string name="elementDefault">/</string>
    <string name="besediloElementov">Dozdajsnji elementi:</string>
    <string name="datotekaZVsebino">datotekaZVsebino.txt</string>
    <string name="datotekaSkupine">datotekaSkupine.txt</string>
    <string name="skupineSeznam">skupineSeznam.txt</string>
    <string name="naSkupine"><![CDATA[< Na skupine]]></string>
    <string name="na_skupine"><![CDATA[< Na skupine]]></string>
    <string name="stroskovni">Stroškovnik</string>
    <string name="oseba">Oseba</string>
    <string name="eur">EUR</string>
    <string name="shrani">Shrani</string>
    <string name="nazaj">Nazaj</string>
    <string name="stroskovnik">Stroškovnik</string>
    <string name="e_mail_naslovi">E-mail naslovi</string>
</resources>